# rubberduck-demo

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  RUBBERDUCK_INVESTOR_REPORT.md  RUBBERDUCK_MCP_GUIDE.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
backend/: README.md  pyproject.toml
backend/src/rubberduck/: __init__.py  config.py  main.py
backend/src/rubberduck/communications/: network_analyzer.py  router.py
backend/src/rubberduck/db/: __init__.py  duckdb_conn.py  models.py  sqlite.py
backend/src/rubberduck/entities/: __init__.py  regex_extractors.py  resolver.py  router.py  secret_scanner.py  service.py  spacy_ner.py
backend/src/rubberduck/evidence/: __init__.py  archive.py  email_extractor.py  hasher.py  manifest.py  router.py  service.py  spam_classifier.py  store.py
backend/src/rubberduck/evidence/parsers/: __init__.py  base.py  browser_db.py  docx.py  email_parser.py  google_takeout.py  html_parser.py  image.py  pdf.py  plaintext.py  sqlite_parser.py  whatsapp_parser.py
backend/src/rubberduck/financial/: __init__.py  parser.py  router.py  service.py
backend/src/rubberduck/forensics/: __init__.py  alerts.py  hidden_content.py  router.py
backend/src/rubberduck/geo/: __init__.py  router.py  service.py
backend/src/rubberduck/graph/: __init__.py  analyzer.py  builder.py  relationships.py  router.py  service.py
backend/src/rubberduck/hypothesis/: __init__.py  router.py  scoring.py  service.py
backend/src/rubberduck/jobs/: __init__.py  manager.py  router.py
backend/src/rubberduck/legal/: __init__.py  gap_analyzer.py  google_order_builder.py  router.py  service.py  template_engine.py  watermark.py
backend/src/rubberduck/notebooks/: __init__.py
backend/src/rubberduck/osint/: __init__.py  router.py
backend/src/rubberduck/phone_analysis/: __init__.py  analyzer.py  extractor.py  parser.py  router.py
backend/src/rubberduck/reports/: __init__.py  generator.py  router.py
backend/src/rubberduck/schemas/: alerts.py  common.py  entities.py  evidence.py  graph.py  hypothesis.py  legal.py  search.py  secrets.py  timeline.py
backend/src/rubberduck/search/: __init__.py  indexer.py  router.py  service.py
backend/src/rubberduck/timeline/: __init__.py  normalizer.py  router.py  service.py
backend/tests/: conftest.py
backend/tests/test_evidence/: test_archive.py  test_hasher.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
rubberduck_analyzer/: __init__.py  cli.py
swebench/: CLEAN_TEST.md  DJANGO_11062_DEBUG_REPORT.md  FAILURE_ANALYSIS_DAYTONA.md  FIX_PROPOSALS_DAYTONA.md  OBJECTIVE_TEST_MCP_RUNBOOK.md  README.md  SETTINGS_AND_TYPICAL_RUNS.md  job_config.yaml  job_config_single_10554.yaml  rubberduck_agent.py
(+1461 files in other folders)
