[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rubberduck-analyzer"
version = "0.1.0"
description = "CLI tool for analyzing RubberDuck user testing interviews"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "openpyxl>=3.1",
]

[project.scripts]
rubberduck-analyzer = "rubberduck_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["rubberduck_analyzer*"]
