[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rubberduck-analyzer"
version = "0.1.0"
description = "CLI tool for analyzing RubberDuck user testing interviews"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "openpyxl>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
    "markdown>=3.6",
]

[project.scripts]
rubberduck-analyzer = "rubberduck_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["rubberduck_analyzer*"]
