[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubberduck"
version = "0.1.0"
description = "Local-first digital forensic investigative platform for probate digital-asset matters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "duckdb>=1.0.0",
    # Data / serialization
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyarrow>=16.0.0",
    # Parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "python-magic>=0.4.27",
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "ijson>=3.2.0",
    "python-dateutil>=2.9.0",
    "chardet>=5.2.0",
    # NLP
    "spacy>=3.7.0",
    # Graph
    "networkx>=3.3",
    # Templating (legal docs)
    "Jinja2>=3.1.0",
    # PDF generation
    "weasyprint>=62.0",
    # OSINT
    "playwright>=1.44.0",
    # Logging
    "structlog>=24.1.0",
    # SSE
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
